<resources>
    <string name="app_name">Patitas Felices</string>
    <string name="logo_description">Logo de Patitas Felices</string>
    <string name="app_description">Encontrá a tu nuevo compañero.</string>
    <string name="title_adopt">Adopta una mascota</string>
    <string name="filter_all">Todos</string>
    <string name="filter_dogs">Perros</string>
    <string name="filter_cats">Gatos</string>
    <string name="status_available">Disponible</string>
    <string name="status_adopted">Adoptado</string>
    <string name="btn_adopt">Adoptar</string>
    <string name="pet_image_description">Imagen de la mascota</string>
    <string name="btn_back">Volver</string>
    <string name="confirmation_title">¡Adopción realizada!</string>
    <string name="confirmation_message">¡Felicitaciones! Tu adopción fue realizada con éxito. Gracias por darle un hogar a una mascota. Pronto nos pondremos en contacto con usted para coordinar la entrega.</string>
    <string name="btn_back_to_pets">Volver al listado</string>
    <string name="confirmation_image_description">Imagen de confirmación</string>
    <string name="nav_pets">Mascotas</string>
    <string name="nav_adoptions">Adopciones</string>
    <string name="title_adoptions">Mis Adopciones</string>
    <string name="add_pet">Agregar Mascota</string>
</resources>