<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo_description" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="28sp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/app_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/button_ver_mascotas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ver_mascotas"
            android:layout_marginTop="24dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>